@@ -1,3 +1,7 @@
+TheMightyDude (06 March 2013)
+--------------------------------------
+Fixed some issues in Create Universe, Destroy Schema (not perfect has some config and language issues)
+
 TheKabal (3 March 2013)
 --------------------------------------
 Add handling for invalid xml schema files
